--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -82,6 +82,16 @@ clusterGroup:
       - name: clusterGroup.isHubCluster
         value: false
 
+    exampleRegion:
+      name: group-two
+      acmlabels:
+      - name: clusterGroup
+        value: group-two
+      helmOverrides:
+      - name: clusterGroup.isHubCluster
+        value: false
+
+
       # Before enabling cluster provisioning, ensure AWS and/or Azure
       #   credentials and OCP pull secrets are defined in Vault.
       #   See values-secret.yaml.template
